--- a/_posts/2018-02-05-python3.6_description.md
+++ b/_posts/2018-02-05-python3.6_description.md
@@ -2,6 +2,7 @@
 title: "What's New in Python 3.6 정리"
 date: 2018-02-05 21:45:00
 layout: post
+tags: [Dev, Python, Inde]
 published: false
 ---
 
@@ -64,24 +65,3 @@ From [What's New in Python 3.6](https://docs.python.org/3.6/whatsnew/3.6.html)
 def
 10 + 20 = 30
 ```
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
