--- a/_posts/2018-04-07-Django-DRF-1.md
+++ b/_posts/2018-04-07-Django-DRF-1.md
@@ -5,9 +5,104 @@ tags: [Django, DRF]
 published: false
 ---
 
-# 소개
+# 튜토리얼 1: Serialization
+
+## 소개
 
 이 튜토리얼을 통해 간단한 pastebin code highlighting을 제공해주는 웹 API를 생성해보며 REST framework를 구성하는 다양한 컴포넌트를 소개하고, 이를 어떻게 끼워 맞추는지 이해하는데 도움을 줄 겁니다.
 
 튜토리얼은 상세한 설명을 하기 때문에, 여러분께 쿠키와 즐겨 마시는 맥주 한잔과 시작할 것을 권장드립니다. 만약, 빠른 개요를 원하시면, `quickstart` 문서를 봐주세요.
+
+---
+
+**Note:** 이 튜토리얼에 쓰이는 코드는 Github repository `tomchristie/rest-framework-tutorial`에서 확인하실 수 있습니다. 또한 sandbox 버전을 온라인(`여기`)으로 열람가능합니다.
+
+---
+
+## 새로운 환경 설정하기
+
+다른 것을 진행하기 이전에, `virtualenv`를 통해 새로운 가상환경을 만들어 보겠습니다.
+이는 우리가 작업하는 프로젝트와 다른 프로젝트들을 격리시켜 주며, 사용하는 패키지 설정을 정확하게 유지시켜 줍니다.
+
+```shell
+virtualenv env
+source env/bin/activate
+```
+
+이제 우리는 가상 환경 속에서 작업을 하고, 필요한 패키지를 설치할 수 있어요.
+
+```shell
+pip install django
+pip install djangorestframework
+pip install pygments  # 이 패키지는 code highlighting에 쓰여요.
+```
+
+**Note:** 가상환경을 종료하시고 싶다면, 언제든지 `deactivate`만 쳐주면 됩니다. 더 많은 정보는 `virtualenv documentation`에서 확인해주세요.
+
+
+## 시작하기
+
+자, 이제 코딩을 할 차례네요. 새로운 프로젝트를 생성해보죠.
+
+```shell
+cd ~
+django-admin.py startproject tutorial
+cd tutorial
+```
+
+완료가 되면 웹 API를 만드는데 쓰일 앱을 생성할 수 있습니다.
+
+```shell
+python manage.py startapp snippets
+```
+
+새로 생성한 `snippets` 앱과 설치한 `rest_framework` 앱을 `tutorial/settings.py` 의 `INSTALLED_APPS` 부분에 추가해줘야 합니다.
+
+```python
+INSTALLED_APPS = (
+    ...
+    'rest_framework',
+    'snippets.apps.SnippetsConfig',
+)
+```
+
+좋아요. 이제 준비가 다 끝났군요.
+
+
+## 사용할 새로운 model 생성하기
+
+이번 튜토리얼의 목적을 위해 코드 뭉치를 저장해주는 `Snippet` model을 생성해주며 시작합니다. 이제 `snippets/models.py` 코드를 수정해주세요. 
+**Note:** 좋은 프로그래밍 연습은 주석을 포함합니다. 비록 이 튜토리얼의 repository 버전에서 확인할 수 있겠지만, 우리는 코드에 집중하기 위해 주석을 생략하였습니다.
+
+```python
+from django.db import models
+from pygments.lexers import get_all_lexers
+from pygments.styles import get_all_styles
+
+LEXERS = [item for item in get_all_lexers() if item[1]]
+LANGUAGE_CHOICES = sorted([(item[1][0], item[0]) for item in LEXERS])
+STYLE_CHOICES = sorted((item, item) for item in get_all_styles())
+
+
+class Snippet(models.Model):
+    created = models.DateTimeField(auto_now_add=True)
+    title = models.CharField(max_length=100, blank=True, default='')
+    code = models.TextField()
+    linenos = models.BooleanField(default=False)
+    language = models.CharField(choices=LANGUAGE_CHOICES, default='python', max_length=100)
+    style = models.CharField(choices=STYLE_CHOICES, default='friendly', max_length=100)
+
+    class Meta:
+        ordering = ('created',)
+```
+
+또한, 우리가 생성한 `snippet` 모델의 최초 migration을 만들고, 데이터베이스와 동기화해야합니다.
+
+```shell
+python manage.py makemigrations snippets
+python manage.py migrate
+```
+
+
+## Serializer 클래스 생성하기
 
