add: DRF tutorial-1 serializers

--- a/_posts/2018-04-07-Django-DRF-1.md
+++ b/_posts/2018-04-07-Django-DRF-1.md
@@ -106,3 +106,38 @@ python manage.py migrate
 
 ## Serializer 클래스 생성하기
 
+우리가 만들려는 Web API에서 가장 먼저해야 할 것은 바로 `snippet` 인스턴스를 `json`과 같은 형태로 serialize / deserialize할 방법을 만드는 것 입니다.
+
+우리는 Django의 폼(form)과 비슷한 형태로 작동하는 serializer라는 것을 선언하여 만들 수 있습니다. `snippets`디렉토리 안에 `serializers.py`라는 파일을 만들고, 다음 코드를 작성해 주세요.
+
+```python
+from rest_framework import serializers
+from snippets.models import Snippet, LANGUAGE_CHOICES, STYLE_CHOICES
+
+
+class SnippetSerializer(serializers.Serializer):
+    id = serializers.IntegerField(read_only=True)
+    title = serializers.CharField(required=False, allow_blank=True, max_length=100)
+    code = serializers.CharField(style={'base_template': 'textarea.html'})
+    linenos = serializers.BooleanField(required=False)
+    language = serializers.ChoiceField(choices=LANGUAGE_CHOICES, default='python')
+    style = serializers.ChoiceField(choices=STYLE_CHOICES, default='friendly')
+
+    def create(self, validated_data):
+        """
+        Create and return a new `Snippet` instance, given the validated data.
+        """
+        return Snippet.objects.create(**validated_data)
+
+    def update(self, instance, validated_data):
+        """
+        Update and return an existing `Snippet` instance, given the validated data.
+        """
+        instance.title = validated_data.get('title', instance.title)
+        instance.code = validated_data.get('code', instance.code)
+        instance.linenos = validated_data.get('linenos', instance.linenos)
+        instance.language = validated_data.get('language', instance.language)
+        instance.style = validated_data.get('style', instance.style)
+        instance.save()
+        return instance
+```
