add: DRF tutorial-1 serializers

--- a/_posts/2018-04-07-Django-DRF-1.md
+++ b/_posts/2018-04-07-Django-DRF-1.md
@@ -106,7 +106,7 @@ python manage.py migrate
 
 ## Serializer 클래스 생성하기
 
-우리가 만들려는 Web API에서 가장 먼저해야 할 것은 바로 `snippet` 인스턴스를 `json`과 같은 형태로 serialize / deserialize할 방법을 만드는 것 입니다.
+우리가 만들려는 Web API에서 가장 먼저해야 할 일은 바로 `snippet` 인스턴스를 `json`과 같은 형태로 serialize / deserialize할 방법을 만드는 것 입니다.
 
 우리는 Django의 폼(form)과 비슷한 형태로 작동하는 serializer라는 것을 선언하여 만들 수 있습니다. `snippets`디렉토리 안에 `serializers.py`라는 파일을 만들고, 다음 코드를 작성해 주세요.
 
@@ -141,3 +141,8 @@ class SnippetSerializer(serializers.Serializer):
         instance.save()
         return instance
 ```
+
+serializer 클래스의 첫번째 부분은 serialize/deserialize 되는 필드를 정의합니다. `create()`와 `update()` 메소드는 `serializer.save()`를 호출했을 때 완벽하게 작동되는 인스턴스들이 생성되고 변경되는지 정의해줍니다.
+
+serializer 클래스는 Django의 `Form` 클래스와 매우 유사하며, `required`, `max_length` 그리고, `default` 와 같이 비슷한 validation 값을 포함하고 있습니다.
+
